# spider_cpp_diplom

./: CMakeLists.txt  config.ini  config_and_utils.cpp  config_and_utils.h
DB/: DB_worker.cpp  DB_worker.h
http_server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp
spider/: CMakeLists.txt  http_utils.cpp  http_utils.h  main.cpp
